<resources>
    <string name="app_name">Milanease</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Username must be >5 characters</string>
    <string name="invalid_client_id">Client ID must be 8 digits long</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dashboard_tab">Dashboard</string>
    <string name="bills_tab">Bills</string>
    <string name="providers_tab">Providers</string>
    <string name="more_tab">More</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="segmented_control_electricity">Electricity</string>
    <string name="segmented_control_gas">Gas</string>
    <string name="segmented_control_water">Water</string>
    <string name="today">Today</string>
    <string name="last_updated">updated 15 mins ago</string>
    <string name="activity_provider_add_contract">Add a contract now</string>
    <string name="bill_card_total_consumption">Total consumption</string>
    <string name="bill_card_pdf">PDF</string>
    <string name="today_vs_yesterday_today">today</string>
    <string name="today_vs_yesterday_consumed">You have consumed</string>
    <string name="today_vs_yesterday_yesterday">yesterday</string>
    <string name="exchange_card_this_month">This month</string>
    <string name="activity_chat_hint">Enter message</string>
    <string name="activity_chat_send">SEND</string>
    <string name="enel">Enel</string>
    <string name="activity_provider_contract">Contract</string>
    <string name="activity_login_email">E-mail</string>
    <string name="activity_login_login">Login</string>
    <string name="activity_login_repeat_password">Repeat password</string>
    <string name="activity_login_client_id">Client ID</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="login_activity_register">Register</string>
    <string name="login_activity_registration_form">Registration form</string>
    <string name="activity_login_sign_in_instead">SIGN IN INSTEAD</string>
    <string name="today_vs_yesterday_interpretation">more water than</string>
    <string name="today_vs_yesterday_percentage">55%</string>
</resources>
