<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/water_button"

        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_border"
        android:text="@string/segmented_control_water"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.333"
        />

    <Button
        android:id="@+id/gas_button"

        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_border"
        android:text="@string/segmented_control_gas"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/water_button"
        app:layout_constraintTop_toTopOf="@+id/water_button"
        app:layout_constraintWidth_percent="0.333"/>


    <Button
        android:id="@+id/electricity_button"

        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_border"
        android:text="@string/segmented_control_electricity"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/gas_button"
        app:layout_constraintTop_toTopOf="@+id/gas_button"
        app:layout_constraintWidth_percent="0.333"
        />

</androidx.constraintlayout.widget.ConstraintLayout>