<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:id="@+id/today_vs_yesterday_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/today_vs_yesterday_consumed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/today_vs_yesterday_consumed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/today_vs_yesterday_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/today_vs_yesterday_today"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/today_vs_yesterday_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    tools:text="@string/today_vs_yesterday_percentage" />

                <ImageView
                    android:id="@+id/today_vs_yesterday_up_down"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:scaleType="centerCrop"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    tools:srcCompat="@drawable/up_24dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/today_vs_yesterday_interpretation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                tools:text="@string/today_vs_yesterday_interpretation" />

            <TextView
                android:id="@+id/today_vs_yesterday_yesterday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/today_vs_yesterday_yesterday"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/today_vs_yesterday_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </androidx.cardview.widget.CardView>
</LinearLayout>